# hiro

./: '  Cargo.toml  Dockerfile  Dockerfile.master  LICENSE  README.md  docker-compose.yml
src/: lib.rs  main.rs
src/client/: handler.rs  mod.rs  upload_file.rs
src/client/controllers/: mod.rs
src/client/state/: files.rs  mod.rs  peer.rs
src/constants/: mod.rs
src/env/: helpers.rs  mod.rs
src/error/: mod.rs
src/file/: mod.rs
src/file/chunk/: mod.rs
src/file/chunk/v1/: mod.rs
src/file/file/: mod.rs
src/file/piece/: mod.rs
src/file/piece/v1/: mod.rs
src/id/v1/: mod.rs
src/interface/: constants.rs  mod.rs
src/interface/data/: file.rs  mod.rs  peer.rs  piece.rs
src/interface/data/piece/: mod.rs  piece.rs  piece_with_data.rs
src/interface/message/: helpers.rs  mod.rs
src/interface/message/payload/: mod.rs
src/interface/msg/: mod.rs
src/interface/msg/types/: mod.rs
src/interface/payload/: mod.rs
src/interfaces/: file.rs  mod.rs
src/master/: handler.rs  mod.rs  server.rs
src/master/controllers/: mod.rs
src/peer/: mod.rs  peer.rs  task.rs
src/worker/: handler.rs  mod.rs  server.rs
src/worker/controllers/: mod.rs
