[package]
name = "hiro"
version = "0.1.0"
authors = ["ritsource <ritwiksahaofficial@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusqlite = "0.24.0"
uuid = { version = "0.8.1", features = ["v4"] }
serde = { version = "1.0.115", features = ["derive"] }
serde_json = "1.0.57"
lazy_static = "1.4.0"
tokio = { version = "0.2", features = ["full"] }
bytes = "0.5.6"
